test/fail_compilation/fail92.d
// [25]

template crash(T) {
        void crash(T t) {
                foreach(u;t) {}
        }
}

void main() {
        crash(null);
}

